site-additions: expanded benefits section to 6

--- a/HTML/One-Pages/Lawyer/index.html
+++ b/HTML/One-Pages/Lawyer/index.html
@@ -114,7 +114,7 @@
 						<li data-index="rs-68" data-transition="zoomout" data-slotamount="default" data-easein="Power4.easeInOut" data-easeout="Power4.easeInOut" data-masterspeed="2000"  data-thumb="assets/img-temp/promo/img1.jpg" data-rotate="0" data-saveperformance="off" data-title="Intro" data-description="">
 
 							<!-- MAIN IMAGE -->
-							<img src="assets-case/img/DC-min.png" alt="" data-bgposition="50% 10%" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="10" class="rev-slidebg" data-no-retina>
+							<img src="assets/img/people.jpg" alt="" data-bgposition="50% 10%" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="10" class="rev-slidebg" data-no-retina>
 
 							<!-- LAYERS -->
 
@@ -221,7 +221,7 @@
 <section id="about" class="arrow-section">
 	<div class="container-fluid no-column-space">
 		<div class="row equal-height-columns">
-			<div class="col-sm-4 g-text-color-1">
+			<div class=" col-sm-4 g-text-color-1">
 				<div class="arrow-section-block arrow-bottom text-center equal-height-column ">
 					<div class="g-heading-v9">
 						<h3 class="text-uppercase"><strong>Work that Matters</strong></h3>
@@ -293,10 +293,13 @@
 							<p class="benefits-bullets"> Full Medical, Dental, and Vision insurance coverage</p>
 						</li>
 						<li data-mark="-">
-							<p class="benefits-bullets"> Includes a Health Savings Account for immediate family members, allowing funds to be set aside to be used on future medical expenses</p>
+							<p class="benefits-bullets"> Flexible Spending Account (FSA)</p>
 						</li>
 						<li data-mark="-">
-							<p class="benefits-bullets"> Case Consulting contributes up to $4000 to employee HSAs</p>
+							<p class="benefits-bullets"> Short Term Disability, Long Term Disability, and Life Insurance provided</p>
+						</li>
+						<li data-mark="-">
+							<p class="benefits-bullets"> Dependent care account providing tax deferred savings for child care</p>
 						</li>
 					</ul>
 				</div>
@@ -305,21 +308,15 @@
 
 		<div class="row">
 			<div class="col-sm-6 content-boxes-v7">
-				<i id="benefits-fas" class="fa fa-diamond pull-left g-theme-text-color-1"></i>
+				<i id="benefits-fas" class="fa fa-laptop pull-left g-theme-text-color-1"></i>
 				<div class="content-boxes-in-v7">
-					<h4 class="text-uppercase"><strong>Additional Benefits</strong></h4>
+					<h4 class="text-uppercase"><strong>Technology Package</strong></h4>
 					<ul class="list-unstyled marked-list-v1">
 						<li data-mark="-">
 							<p class="benefits-bullets">33 days of leave each year for PTO, Holidays and Training.</p>
 						</li>
 						<li data-mark="-">
 							<p class="benefits-bullets">$1800 per calendar year towards purchase of employee computer/tablet or other technology related device</p>
-						</li>
-						<li data-mark="-">
-							<p class="benefits-bullets">$2500 referral bonus for fully cleared candidates</p>
-						</li>
-						<li data-mark="-">
-							<p class="benefits-bullets">Dependent care account providing tax deferred savings for child care</p>
 						</li>
 					</ul>
 				</div>
@@ -330,13 +327,37 @@
 					<h4 class="text-uppercase"><strong>Professional Development</strong></h4>
 					<ul class="list-unstyled marked-list-v1">
 						<li data-mark="-">
-							<p class="benefits-bullets">$3,500 per year towards professional development and certification</p>
+							<p class="benefits-bullets">$3500 per year towards professional development and certification</p>
 						</li>
 						<li data-mark="-">
 							<p class="benefits-bullets">Includes certifications, screencasts, CBTs, conferences, books, etc.</p>
 						</li>
 						<li data-mark="-">
 							<p class="benefits-bullets">24 hours per year of PTO for professional development and certification</p>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-sm-6 content-boxes-v7">
+				<i id="benefits-fas" class="fa fa-money pull-left g-theme-text-color-1"></i>
+				<div class="content-boxes-in-v7">
+					<h4 class="text-uppercase"><strong>Refererals</strong></h4>
+					<ul class="list-unstyled marked-list-v1">
+						<li data-mark="-">
+							<p class="benefits-bullets">$2500 referral bonus for fully cleared candidates</p>
+						</li>
+					</ul>
+				</div>
+			</div>
+			<div class="col-sm-6 content-boxes-v7">
+				<i id="benefits-fas" class="fa fa-clock-o pull-left g-theme-text-color-1"></i>
+				<div class="content-boxes-in-v7">
+					<h4 class="text-uppercase"><strong>Time off</strong></h4>
+					<ul class="list-unstyled marked-list-v1">
+						<li data-mark="-">
+							<p class="benefits-bullets"> 33 days of leave each year (PTO, Holidays and Training)</p>
 						</li>
 					</ul>
 				</div>
@@ -715,9 +736,11 @@
 
 		<!-- End Testimonials Info -->
 		<div class="container">
-		<div class="col-xs-3">
-			<img src="assets/img/best-place-to-work.png" alt="" class="img-rounded img-responsive" />
+		<div class="col-xs-4 col-xs-offset-4">
+			<img src="assets/img/best-place-to-work.jpg" alt="" class="img-circle img-responsive" />
+
 		</div>
+
 		</div>
 		</section>
 		<!-- End Testimonials section -->
