site-additions: added to benefits section

--- a/HTML/One-Pages/Lawyer/index.html
+++ b/HTML/One-Pages/Lawyer/index.html
@@ -313,10 +313,10 @@
 					<h4 class="text-uppercase"><strong>Technology Package</strong></h4>
 					<ul class="list-unstyled marked-list-v1">
 						<li data-mark="-">
-							<p class="benefits-bullets">33 days of leave each year for PTO, Holidays and Training.</p>
+							<p class="benefits-bullets">$1800 per calendar year towards purchase of employee computer/tablet or other technology related device</p>
 						</li>
 						<li data-mark="-">
-							<p class="benefits-bullets">$1800 per calendar year towards purchase of employee computer/tablet or other technology related device</p>
+							<p class="benefits-bullets">Verizon 4G Wifi Card</p>
 						</li>
 					</ul>
 				</div>
