site-additions: added boxes around benefits

--- a/HTML/One-Pages/Lawyer/index.html
+++ b/HTML/One-Pages/Lawyer/index.html
@@ -267,7 +267,7 @@
 		</div>
 
 		<div class="row">
-			<div class="col-sm-6 content-boxes-v7">
+			<div class="col-sm-5 content-boxes-v7 boxed">
 				<i id="benefits-fas" class="fa fa-gift pull-left g-theme-text-color-1"></i>
 				<div class="content-boxes-in-v7">
 					<h4 class="text-uppercase"><strong>Retirement</strong></h4>
@@ -284,7 +284,7 @@
 					</ul>
 				</div>
 			</div>
-			<div class="col-sm-6 content-boxes-v7">
+			<div class="col-sm-5 col-sm-offset-1 content-boxes-v7 boxed">
 				<i id="benefits-fas" class="fa fa-medkit pull-left g-theme-text-color-1"></i>
 				<div class="content-boxes-in-v7">
 					<h4 class="text-uppercase"><strong>Health Care</strong></h4>
@@ -296,7 +296,7 @@
 							<p class="benefits-bullets"> Flexible Spending Account (FSA)</p>
 						</li>
 						<li data-mark="-">
-							<p class="benefits-bullets"> Short Term Disability, Long Term Disability, and Life Insurance provided</p>
+							<p class="benefits-bullets"> Short Term Disability, Long Term Disability, and Life Insurance</p>
 						</li>
 						<li data-mark="-">
 							<p class="benefits-bullets"> Dependent care account providing tax deferred savings for child care</p>
@@ -307,7 +307,7 @@
 		</div>
 
 		<div class="row">
-			<div class="col-sm-6 content-boxes-v7">
+			<div class="col-sm-5 content-boxes-v7 boxed">
 				<i id="benefits-fas" class="fa fa-laptop pull-left g-theme-text-color-1"></i>
 				<div class="content-boxes-in-v7">
 					<h4 class="text-uppercase"><strong>Technology Package</strong></h4>
@@ -321,7 +321,7 @@
 					</ul>
 				</div>
 			</div>
-			<div class="col-sm-6 content-boxes-v7">
+			<div class="col-sm-5 col-sm-offset-1 content-boxes-v7 boxed">
 				<i id="benefits-fas" class="fa fa-graduation-cap pull-left g-theme-text-color-1"></i>
 				<div class="content-boxes-in-v7">
 					<h4 class="text-uppercase"><strong>Professional Development</strong></h4>
@@ -340,7 +340,7 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-sm-6 content-boxes-v7">
+			<div class="col-sm-5 content-boxes-v7 boxed">
 				<i id="benefits-fas" class="fa fa-money pull-left g-theme-text-color-1"></i>
 				<div class="content-boxes-in-v7">
 					<h4 class="text-uppercase"><strong>Refererals</strong></h4>
@@ -351,7 +351,7 @@
 					</ul>
 				</div>
 			</div>
-			<div class="col-sm-6 content-boxes-v7">
+			<div class="col-sm-5 col-sm-offset-1 content-boxes-v7 boxed">
 				<i id="benefits-fas" class="fa fa-clock-o pull-left g-theme-text-color-1"></i>
 				<div class="content-boxes-in-v7">
 					<h4 class="text-uppercase"><strong>Time off</strong></h4>
