charts: refined charts

--- a/HTML/One-Pages/Lawyer/index.html
+++ b/HTML/One-Pages/Lawyer/index.html
@@ -381,6 +381,7 @@
 						<ul class="list-unstyled marked-list-v1">
 							<li>
 								<div class="retainer">
+									<h4 class="text-center">People Who Like the Hobbit</h4>
 									<div>
 										<canvas id="chart"></canvas>
 									</div>
