charts: reduced picture file sizes

--- a/HTML/One-Pages/Lawyer/index.html
+++ b/HTML/One-Pages/Lawyer/index.html
@@ -227,7 +227,7 @@
 					<p>Case Consulting is a small business focused on providing highly talented, exceptionally skilled developers, managers and integrators to meet mission critical requirements across the IC.</p>
 
 				</div>
-				<div class="arrow-section-img"><img class="full-width" src="assets/img/workstation.jpeg" alt=""></div>
+				<div class="arrow-section-img"><img class="full-width" src="assets/img/workstation.jpg" alt=""></div>
 			</div>
 			<div class="col-sm-4 g-text-color-2 g-theme-bg-color-1">
 				<div class="arrow-section-img"><img class="full-width" src="assets/img/conference-room.jpg" alt=""></div>
