--- a/HTML/One-Pages/Lawyer/index.html
+++ b/HTML/One-Pages/Lawyer/index.html
@@ -662,6 +662,7 @@
 
 						</div>
 
+
 					</div>
 				</section>
 				<!-- End Testimonials section -->
@@ -673,6 +674,30 @@
 							<div class="col-sm-8 col-sm-offset-2">
 								<div class="g-heading-v9 text-center g-mb-30">
 									<h2 class="text-uppercase"><strong>Latest Posts</strong></h2>
+
+						<p class="g-fs-16 text-center g-mb-70">Keep up to date with all of the great things that are happening at Case Consulting by reading our blog and following us on <a href="twitter.com"> Twitter</a>!</p>
+					</div>
+				</div>
+				<div class="col-sm-12">
+
+					<a class="twitter-timeline" data-width="500px" data-height="500px" data-theme="light" data-link-color="#E81C4F" href="https://twitter.com/ConsultwithCase">Tweets by ConsultwithCase</a> <script async src="assets/js/plugins/widgets.js" charset="utf-8"></script>
+				</div>
+			</div>
+		</section>
+		<!-- End Blog section -->
+
+		<!-- Footer -->
+
+		<footer>
+			<!-- Contact section -->
+			<section id="contact" class="g-theme-bg-color-1 g-text-color-2">
+				<div class="container-fluid">
+					<div class="row no-column-space equal-height-columns">
+						<div class="col-sm-6 g-dp-table g-va-middle equal-height-column">
+							<div class="g-pl-80 g-pr-80 g-pl-15--xs g-pr-15--xs g-pt-100 g-pb-50 g-dp-table-cell g-va-middle">
+								<div class="g-heading-v9 g-mb-30">
+									<h2 class="text-uppercase"><strong>Get In Touch</strong></h2>
+
 								</div>
 								<p class="g-fs-16 text-center g-mb-70">Keep up to date with all of the great things that are happening at Case Consulting by reading our blog and following us on <a href="twitter.com"> Twitter</a>!</p>
 							</div>
