events: added event items with pictures

--- a/HTML/One-Pages/Lawyer/index.html
+++ b/HTML/One-Pages/Lawyer/index.html
@@ -520,37 +520,11 @@
 										<li class="item">
 											<div class="col-sm-6">
 												<div class="caption-outer">
-													<img class="img-responsive" src="assets/img/code.jpeg" alt="">
-													<div class="caption g-theme-bg-color-transparent-1 g-va-middle g-padding-25">
-														<div class="valign__middle">
-															<h5 class="text-uppercase"><strong>PROJECT MANAGER</strong></h5>
-															<p>Quisque rhoncus euismod pulvinar. Nulla non arcu at lectus.</p>
-														</div>
-													</div>
-												</div>
-											</div>
-											<!-- item0 -->
-											<div class="col-sm-6">
-												<div class="caption-outer">
-													<img class="img-responsive" src="assets/img-temp/cases/PeopleImages.com-ID1265766.jpg" alt="">
-													<div class="caption g-theme-bg-color-transparent-1 g-va-middle g-padding-25">
-														<div class="valign__middle">
-															<h5 class="text-uppercase"><strong>Interns</strong></h5>
-															<p>Quisque rhoncus euismod pulvinar. Nulla non arcu at lectus.</p>
-														</div>
-													</div>
-												</div>
-											</div>
-										</li>
-										<!-- item1 -->
-										<li class="item">
-											<div class="col-sm-6">
-												<div class="caption-outer">
-													<img class="img-responsive" src="assets/img-temp/cases/PeopleImages.com-ID32142.jpg" alt="">
-													<div class="caption g-theme-bg-color-transparent-1 g-va-middle g-padding-25">
-														<div class="valign__middle">
-															<h5 class="text-uppercase"><strong>SYSTEM ENGINEER</strong></h5>
-															<p>Quisque rhoncus euismod pulvinar. Nulla non arcu at lectus.</p>
+													<img class="img-responsive" src="assets/img/case-holiday-party.jpg" alt="">
+													<div class="caption text-area-background g-va-middle g-padding-25">
+														<div class="">
+															<h5 class="text-uppercase"><strong><a href="https://goo.gl/photos/XUJLga4eea9C5YsJ8" target="_blank">2016 Holiday Party</a></strong></h5>
+															<p>Employees and their loved ones had a great time at our annual holiday party. This year the party was held at Stone Tower Winery in Leesburg and featured an evening of giving, food, poker, and fun.</p>
 														</div>
 													</div>
 												</div>
@@ -558,26 +532,25 @@
 											<!-- item2 -->
 											<div class="col-sm-6">
 												<div class="caption-outer">
-													<img class="img-responsive" src="assets/img-temp/cases/PeopleImages.com-ID375436.jpg" alt="">
-													<div class="caption g-theme-bg-color-transparent-1 g-va-middle g-padding-25">
-														<div class="valign__middle">
-															<h5 class="text-uppercase"><strong>SYSTEM INTEGRATOR</strong></h5>
-															<p>Quisque rhoncus euismod pulvinar. Nulla non arcu at lectus.</p>
+													<img class="img-responsive" src="assets/img/case-family-picnic.jpg" alt="">
+													<div class="caption text-area-background g-va-middle g-padding-25">
+														<div class="">
+															<h5 class="text-uppercase"><strong><a href="https://goo.gl/photos/woAx1UPoRKLa5yDY8" target="_blank">2016 Family Picnic</a></strong></h5>
+															<p class="p-scroll">Our annual Summer picnic is always a blast for employees and their families and this year was no different. The kids (and some adults) enjoyed the inflatable obstacle course and face painting.</p>
 														</div>
 													</div>
 												</div>
 											</div>
 										</li>
-
 										<!-- item3 -->
 										<li class="item">
 											<div class="col-sm-6">
 												<div class="caption-outer">
-													<img class="img-responsive" src="assets/img-temp/cases/PeopleImages.com-ID32142.jpg" alt="">
-													<div class="caption g-theme-bg-color-transparent-1 g-va-middle g-padding-25">
-														<div class="valign__middle">
-															<h5 class="text-uppercase"><strong>DEVELOPER</strong></h5>
-															<p>Quisque rhoncus euismod pulvinar. Nulla non arcu at lectus.</p>
+													<img class="img-responsive" src="assets/img/AWS-trip.jpeg" alt="">
+													<div class="caption text-area-background g-va-middle g-padding-25">
+														<div class="">
+															<h5 class="text-uppercase"><strong><a href="https://goo.gl/photos/GBAABr7AxbnFCX9z7" target="_blank">re:Invent 2016</a></strong></h5>
+															<p>Case Consulting was well represented at AWS re:Invent this year. Employees enjoyed all of the talks and after-hours events and can't wait to go back next year.</p>
 														</div>
 													</div>
 												</div>
@@ -585,42 +558,16 @@
 											<!-- item4 -->
 											<div class="col-sm-6">
 												<div class="caption-outer">
-													<img class="img-responsive" src="assets/img-temp/cases/PeopleImages.com-ID375436.jpg" alt="">
-													<div class="caption g-theme-bg-color-transparent-1 g-va-middle g-padding-25">
-														<div class="valign__middle">
-															<h5 class="text-uppercase"><strong>Account Manager</strong></h5>
-															<p>Quisque rhoncus euismod pulvinar. Nulla non arcu at lectus.</p>
+													<img class="img-responsive" src="assets/img/starwars-trip.jpg" alt="">
+													<div class="caption text-area-background g-va-middle g-padding-25">
+														<div class="">
+															<h5 class="text-uppercase"><strong><a href="https://goo.gl/photos/kikrh8Tcf3HzmDYp9" target="_blank">Star Wars: The Force Awakens</a></strong></h5>
+															<p>Several employees viewed the latest Star Wars movie at the Udvar Hazy IMAX theater.</p>
 														</div>
 													</div>
 												</div>
 											</div>
 										</li>
-										<!-- item5 -->
-										<li class="item">
-											<div class="col-sm-6">
-												<div class="caption-outer">
-													<img class="img-responsive" src="assets/img-temp/cases/flickr.com___photos___highwaysagency___5998133376___sizes___o.jpg" alt="">
-													<div class="caption g-theme-bg-color-transparent-1 g-va-middle g-padding-25">
-														<div class="valign__middle">
-															<h5 class="text-uppercase"><strong>SYSTEM ADMINISTRATOR</strong></h5>
-															<p>Quisque rhoncus euismod pulvinar. Nulla non arcu at lectus.</p>
-														</div>
-													</div>
-												</div>
-											</div>
-											<!-- item6 -->
-											<div class="col-sm-6">
-												<div class="caption-outer">
-													<img class="img-responsive" src="assets/img-temp/cases/PeopleImages.com-ID48289.jpg" alt="">
-													<div class="caption g-theme-bg-color-transparent-1 g-va-middle g-padding-25">
-														<div class="valign__middle">
-															<h5 class="text-uppercase"><strong>Fun haver</strong></h5>
-															<p>Quisque rhoncus euismod pulvinar. Nulla non arcu at lectus.</p>
-														</div>
-
-													</div>
-												</div>
-											</div>
 
 										</div>
 									</ul>
