events: added awards nav item

--- a/HTML/One-Pages/Lawyer/index.html
+++ b/HTML/One-Pages/Lawyer/index.html
@@ -87,7 +87,7 @@
 								<a href="#events"><span data-hover="Events">Events</span></a>
 							</li>
 							<li class="page-scroll">
-								<a href="#testimonials"><span data-hover="Testimonials">Testimonials</span></a>
+								<a href="#awards"><span data-hover="Awards">Awards</span></a>
 							</li>
 							<li class="page-scroll">
 								<a href="#blog"><span data-hover="Blog">Blog</span></a>
@@ -580,11 +580,10 @@
 			</section>
 			<!-- End Events section -->
 
-			<!-- Testimonials section -->
-			<section id="testimonials" class="g-theme-bg-color-1 g-text-color-2 text-center g-pt-100 g-pb-40">
+			<!-- Awards section -->
+			<section id="awards" class="g-theme-bg-color-1 g-text-color-2 text-center g-pt-100 g-pb-40">
 				<div class="container">
 
-					<!-- Testimonials Info -->
 
 					<div class="row g-mb-70">
 						<div class="col-sm-8 col-sm-offset-2 g-heading-v9 text-center">
@@ -592,7 +591,7 @@
 						</div>
 					</div>
 
-					<!-- End Testimonials Info -->
+
 					<div class="container">
 						<div class="col-xs-4 col-xs-offset-4">
 							<img src="assets/img/best-place-to-work.jpg" alt="" class="img-circle img-responsive" />
@@ -602,7 +601,7 @@
 
 					</div>
 				</section>
-				<!-- End Testimonials section -->
+				<!-- End Awards section -->
 
 				<!-- Blog section -->
 				<section id="blog">
