moved sections around; added second chart

--- a/HTML/One-Pages/Lawyer/index.html
+++ b/HTML/One-Pages/Lawyer/index.html
@@ -368,27 +368,17 @@
 <!-- End Benefits section -->
 
 <!-- Why we section -->
-<section id="why-we" class="g-theme-bg-color-1 g-text-color-2 no-column-space">
+<!-- <section id="why-we" class="g-theme-bg-color-1 g-text-color-2 no-column-space">
 	<div class="container-fluid">
 		<div class="row equal-height-columns">
 			<div class="col-sm-6 equal-height-column g-dp-table g-va-middle">
 				<div class="g-pl-80 g-pr-80 g-pl-15--xs g-pr-15--xs g-dp-table-cell g-va-middle">
-					<div class="g-pt-100 g-pb-50">
-						<div class="g-heading-v9 g-mb-30">
-							<h2><strong>Why Choose Us</strong></h2>
-						</div>
-						<p class="g-fs-16 g-mb-50">Case Consulting is committed to creating a close knit culture of technology professionals, focused on delivering superior expertise and support, and application development to customers in the Commercial and Federal Government markets.  Case Consulting recognizes that employees are its number one asset and therefore offers a salary and benefits package that reflect this.</p>
-						<ul class="list-unstyled marked-list-v1">
-							<li>
-								<div class="retainer">
-									<h4 class="text-center">People Who Like the Hobbit</h4>
-									<div>
-										<canvas id="chart"></canvas>
-									</div>
-								</div></li>
-						</ul>
+					<div class="g-pt-100 g-pb-50"> -->
 
-					</div>
+						<!-- Charts -->
+
+
+					<!-- </div>
 				</div>
 			</div>
 
@@ -397,105 +387,119 @@
 			</div>
 		</div>
 	</div>
-</section>
+</section> -->
 <!-- End Why we section -->
 
 <!-- Careers section -->
 <section id="#" class="g-theme-bg-color-1 g-text-color-2 no-column-space">
 	<div class="container-fluid">
-		<div class="row equal-height-columns">
-			<div class="col-sm-6">
-				<img class="equal-height-column hidden-xs" src="assets/img/benefit.jpeg" alt="" height="500">
+		<div class="container g-pt-100 g-pb-30">
+			<div class="g-heading-v9 g-mb-30 text-center">
+				<h2><strong>Careers</strong></h2>
 			</div>
-			<div class="col-sm-6 g-dp-table g-va-middle">
-				<div class="g-pl-80 g-pr-80 g-pl-15--xs g-pr-15--xs g-dp-table-cell g-va-middle equal-height-column benefits-container">
-					<div class="g-pt-100 g-pb-30">
-						<div class="g-heading-v9 g-mb-30">
-							<h2><strong>Not Careers</strong></h2>
-						</div>
-						<p id="benefits-description">Case Consulting recognizes that employees are its number one asset and therefore offers a salary and benefits package that reflect this.</p>
+			<ul class="nav nav-tabs list-unstyled">
+			<li class="active"><a data-toggle="tab" href="#project-manager">Project Manager</a></li>
+			<li><a data-toggle="tab" href="#system-engineer">System Engineer</a></li>
+			<li><a data-toggle="tab" href="#system-integrator">System Integrator</a></li>
+			<li><a data-toggle="tab" href="#developer">Developer</a></li>
+			<li><a data-toggle="tab" href="#system-admin">System Administrator</a></li>
+		</ul>
 
-
-
-
+		<div class="tab-content">
+		 <div id="project-manager" class="tab-pane fade in active">
+			<div class="col-md-12">
+				<h3 class="text-uppercase"><strong>Project Manager</strong></h3>
+			</div>
+			<div class="col-md-7">
+				<p>Duties:  The Project Manager shall work with their Manager and other representatives to achieve the objectives of the project they are assigned to. The Project Manager is responsible for the overall management of the specific project (s) and insuring that the technical solutions and schedules are implemented in a timely manner. The PM is responsible for all aspects of the project including cost schedules, documentation preparation and customer interaction; Ensures that all control gates are met on schedule; Performs organizational wide integration planning and interfaces to other functional systems; ensures that the project team members are fully utilized or are made available to support other projects to meet the requirements.</p>
+			</div>
+			<div class="col-md-4 col-md-offset-1">
+				<img src="assets/img-temp/team/team1.jpg" class="img-rounded">
+			</div>
+		 </div>
+		 <div id="system-engineer" class="tab-pane fade">
+			 <div class="col-md-12">
+				 <h3 class="text-uppercase"><strong>System Engineer</strong></h3>
+			 </div>
+			 <div class="col-md-7">
+				 <p>Duties:  System Engineers provide strategic and tactical planning and engineering support for projects.  Personnel are assigned to more complex development tasks based on their Level of expertise.  Level 1+ personnel are recognized experts who are assigned to specific high risk or complex projects but are also used to mentor junior personnel and provide ad-hoc support to other projects when needed.  Personnel lead engineering activities of teams, are assigned to large complex projects, and support the preparation of cost and schedule estimates.  Lead engineering activities for smaller less complex projects and support the preparation of cost and schedule estimates for those types of projects.  Support engineering activities and may be responsible for all engineering support for small projects. Responsible for supporting larger projects under the guidance of more experienced System Engineers and may be the engineering resource for simple projects or less complex tasks. This category includes but is not limited to the following roles:   Data Architect, Help Desk, Knowledge Management Specialist, Network Engineer, Quality Assurance Manager, Systems Analyst, Systems Architect, Systems Engineer and Technical Consultant.
+				 </p>
+			 </div>
+			 <div class="col-md-4 col-md-offset-1">
+				 <img src="assets/img-temp/team/team1.jpg" class="img-rounded">
+			 </div>
+		 </div>
+		 <div id="system-integrator" class="tab-pane fade">
+			 <div class="col-md-12">
+				 <h3 class="text-uppercase"><strong>System Integrator</strong></h3>
+			 </div>
+			 <div class="col-md-7">
+				 <p>Duties: Provides a total systems perspective including a technical understanding of relationships, dependencies and requirements of hardware and software components for a project.  Must be knowledgeable in computer systems and gathering/identifying requirements. Must be knowledgeable in life-cycle support, including maintenance, administration, and management.  Creates, drafts and/or reviews program documentation, generates formal review documentation, and participates in system and program reviews.  Reviews program plans, identifies inconsistencies.  Coordinates, supports and participates in program meetings and reviews.  Assists in the evaluation of software and associated documentation.  Participates in formal and informal reviews to determine quality.  Must be able to track project studies, plans, actions items, take minutes, etc.   Provides frequent contact with customers, trace ability within program documents, and the overall computing environment and architecture. Manages/updates the master schedule.  Ensures coordination and information flow occur between all programs and organizational managers.
+				 </p>
+			 </div>
+			 <div class="col-md-4 col-md-offset-1">
+				 <img src="assets/img-temp/team/team1.jpg" class="img-rounded">
+			 </div>
+		 </div>
+		 <div id="developer" class="tab-pane fade">
+			 <div class="col-md-12">
+				 <h3 class="text-uppercase"><strong>Developer</strong></h3>
+			 </div>
+			 <div class="col-md-7">
+				 <p>Duties: Develops, implements and tests software to meet specific project requirements.  Personnel are recognized experts who are assigned to specific high risk or complex projects but are also used to mentor junior personnel and provide ad-hoc support to other projects when needed.  Lead development activities of teams, are assigned to large complex projects, and support the preparation of cost and schedule estimates.  Lead development activities for smaller less complex projects and support the preparation of cost and schedule estimates for those types of projects.  Support development activities and may be the developer for small projects. Responsible for development efforts of simple applications to small less complex tasks.</p>
+			 </div>
+			 <div class="col-md-4 col-md-offset-1">
+				 <img src="assets/img-temp/team/team1.jpg" class="img-rounded">
+			 </div>
+		 </div>
+		 <div id="system-admin" class="tab-pane fade">
+			<div class="col-md-12">
+				<h3 class="text-uppercase"><strong>System Administrator</strong></h3>
+			</div>
+			<div class="col-md-7">
+				<p>Duties:  Coordinates and/or performs the O&M activities for Unix or Windows servers. Develops and documents the full range of SOPs and schedules for O&M activities. Identifies recurring O&M problems and recommends steps to reduce the severity and frequency of the problems. Assists application developers in testing and debugging new programs to ensure compatibility with existing server technologies. Troubleshoots and resolves installation problems; documents procedures for problem resolution. Consults with support teams, help desks, customers, and other technical staff in the resolution of server related problems. Provides first tier support to storage area network and enterprise storage systems. Performs server and storage capacity planning for the most complex and critical systems. Recommends and implements process and tool improvements to improve the efficiency and effectiveness of the organization's change management and configuration management processes and systems. Plans for transition of the development and/or production environment to new technology. Recommends and plans server recapitalization. Performs server performance tuning. Baselines and forecasts server performance data and tunes server hardware and software configurations. Utilizes system software to monitor the performance of system files; manages system data to maintain performance efficiencies. Studies system requirements to determine proper server installation methods and procedures. May provide 24x7 operational support.
+				</p>
+			</div>
+			<div class="col-md-4 col-md-offset-1">
+				<img src="assets/img-temp/team/team1.jpg" class="img-rounded">
+			</div>
+		 </div>
+		</div>
+		</div>
+	</div>
 		</section>
 		<!-- End Careers section -->
-<!-- Career section -->
+
+<!-- Demographics section -->
 <section id="careers">
-	<div class="container g-pt-100 g-pb-30">
-		<div class="g-heading-v9 g-mb-30 text-center">
-			<h2><strong>Careers</strong></h2>
-		</div>
-		<ul class="nav nav-tabs list-unstyled">
-    <li class="active"><a data-toggle="tab" href="#project-manager">Project Manager</a></li>
-    <li><a data-toggle="tab" href="#system-engineer">System Engineer</a></li>
-    <li><a data-toggle="tab" href="#system-integrator">System Integrator</a></li>
-    <li><a data-toggle="tab" href="#developer">Developer</a></li>
-		<li><a data-toggle="tab" href="#system-admin">System Administrator</a></li>
- </ul>
+	<div class="container-fluid">
+	<div class="g-pt-100 g-pb-30 col-offset-md-4">
+	  <div class="g-heading-v9 g-mb-30 text-center">
+	    <h2><strong>Numbers</strong></h2>
+	  </div>
+	  <!-- Pie Chart -->
+<div style="margin-left: 27.5%;">
+		<ul class="list-unstyled marked-list-v1">
+	    <li>
+	      <div class="pie-container">
+	        <h4 class="text-center">People Who Like the Hobbit</h4>
+	        <div>
+	          <canvas id="pie"></canvas>
+	        </div>
+	      </div>
+			</li>
+			<li>
+	      <div class="bar-container">
+	        <h4 class="text-center">People Who Like the Hobbit</h4>
+	        <div>
+	          <canvas id="bar"></canvas>
+	        </div>
+	      </div>
+			</li>
+	  </ul>
 
- <div class="tab-content">
-   <div id="project-manager" class="tab-pane fade in active">
-    <div class="col-md-12">
-      <h3 class="text-uppercase"><strong>Project Manager</strong></h3>
-    </div>
-    <div class="col-md-7">
-      <p>Duties:  The Project Manager shall work with their Manager and other representatives to achieve the objectives of the project they are assigned to. The Project Manager is responsible for the overall management of the specific project (s) and insuring that the technical solutions and schedules are implemented in a timely manner. The PM is responsible for all aspects of the project including cost schedules, documentation preparation and customer interaction; Ensures that all control gates are met on schedule; Performs organizational wide integration planning and interfaces to other functional systems; ensures that the project team members are fully utilized or are made available to support other projects to meet the requirements.</p>
-    </div>
-    <div class="col-md-4 col-md-offset-1">
-      <img src="assets/img-temp/team/team1.jpg" class="img-rounded">
-    </div>
-   </div>
-   <div id="system-engineer" class="tab-pane fade">
-     <div class="col-md-12">
-       <h3 class="text-uppercase"><strong>System Engineer</strong></h3>
-     </div>
-     <div class="col-md-7">
-       <p>Duties:  System Engineers provide strategic and tactical planning and engineering support for projects.  Personnel are assigned to more complex development tasks based on their Level of expertise.  Level 1+ personnel are recognized experts who are assigned to specific high risk or complex projects but are also used to mentor junior personnel and provide ad-hoc support to other projects when needed.  Personnel lead engineering activities of teams, are assigned to large complex projects, and support the preparation of cost and schedule estimates.  Lead engineering activities for smaller less complex projects and support the preparation of cost and schedule estimates for those types of projects.  Support engineering activities and may be responsible for all engineering support for small projects. Responsible for supporting larger projects under the guidance of more experienced System Engineers and may be the engineering resource for simple projects or less complex tasks. This category includes but is not limited to the following roles:   Data Architect, Help Desk, Knowledge Management Specialist, Network Engineer, Quality Assurance Manager, Systems Analyst, Systems Architect, Systems Engineer and Technical Consultant.
-			 </p>
-     </div>
-     <div class="col-md-4 col-md-offset-1">
-       <img src="assets/img-temp/team/team1.jpg" class="img-rounded">
-     </div>
-   </div>
-   <div id="system-integrator" class="tab-pane fade">
-     <div class="col-md-12">
-       <h3 class="text-uppercase"><strong>System Integrator</strong></h3>
-     </div>
-     <div class="col-md-7">
-       <p>Duties: Provides a total systems perspective including a technical understanding of relationships, dependencies and requirements of hardware and software components for a project.  Must be knowledgeable in computer systems and gathering/identifying requirements. Must be knowledgeable in life-cycle support, including maintenance, administration, and management.  Creates, drafts and/or reviews program documentation, generates formal review documentation, and participates in system and program reviews.  Reviews program plans, identifies inconsistencies.  Coordinates, supports and participates in program meetings and reviews.  Assists in the evaluation of software and associated documentation.  Participates in formal and informal reviews to determine quality.  Must be able to track project studies, plans, actions items, take minutes, etc.   Provides frequent contact with customers, trace ability within program documents, and the overall computing environment and architecture. Manages/updates the master schedule.  Ensures coordination and information flow occur between all programs and organizational managers.
-			 </p>
-     </div>
-     <div class="col-md-4 col-md-offset-1">
-       <img src="assets/img-temp/team/team1.jpg" class="img-rounded">
-     </div>
-   </div>
-   <div id="developer" class="tab-pane fade">
-     <div class="col-md-12">
-       <h3 class="text-uppercase"><strong>Developer</strong></h3>
-     </div>
-     <div class="col-md-7">
-       <p>Duties: Develops, implements and tests software to meet specific project requirements.  Personnel are recognized experts who are assigned to specific high risk or complex projects but are also used to mentor junior personnel and provide ad-hoc support to other projects when needed.  Lead development activities of teams, are assigned to large complex projects, and support the preparation of cost and schedule estimates.  Lead development activities for smaller less complex projects and support the preparation of cost and schedule estimates for those types of projects.  Support development activities and may be the developer for small projects. Responsible for development efforts of simple applications to small less complex tasks.</p>
-     </div>
-     <div class="col-md-4 col-md-offset-1">
-       <img src="assets/img-temp/team/team1.jpg" class="img-rounded">
-     </div>
-   </div>
-	 <div id="system-admin" class="tab-pane fade">
-    <div class="col-md-12">
-      <h3 class="text-uppercase"><strong>System Administrator</strong></h3>
-    </div>
-    <div class="col-md-7">
-      <p>Duties:  Coordinates and/or performs the O&M activities for Unix or Windows servers. Develops and documents the full range of SOPs and schedules for O&M activities. Identifies recurring O&M problems and recommends steps to reduce the severity and frequency of the problems. Assists application developers in testing and debugging new programs to ensure compatibility with existing server technologies. Troubleshoots and resolves installation problems; documents procedures for problem resolution. Consults with support teams, help desks, customers, and other technical staff in the resolution of server related problems. Provides first tier support to storage area network and enterprise storage systems. Performs server and storage capacity planning for the most complex and critical systems. Recommends and implements process and tool improvements to improve the efficiency and effectiveness of the organization's change management and configuration management processes and systems. Plans for transition of the development and/or production environment to new technology. Recommends and plans server recapitalization. Performs server performance tuning. Baselines and forecasts server performance data and tunes server hardware and software configurations. Utilizes system software to monitor the performance of system files; manages system data to maintain performance efficiencies. Studies system requirements to determine proper server installation methods and procedures. May provide 24x7 operational support.
-			</p>
-    </div>
-    <div class="col-md-4 col-md-offset-1">
-      <img src="assets/img-temp/team/team1.jpg" class="img-rounded">
-    </div>
-   </div>
- </div>
-
-
+	</div>
+	</div>
 	</div>
 </section>
 <!-- End Career section -->
