switch-sections: chart tweaks

--- a/HTML/One-Pages/Lawyer/index.html
+++ b/HTML/One-Pages/Lawyer/index.html
@@ -473,7 +473,7 @@
 <!-- Demographics section -->
 <section id="careers">
 	<div class="container-fluid">
-	<div class="g-pt-100 g-pb-30 col-offset-md-4">
+	<div class="g-pt-100 g-pb-30">
 	  <div class="g-heading-v9 g-mb-30 text-center">
 	    <h2><strong>Numbers</strong></h2>
 	  </div>
