deployment: minor text change to test build

--- a/src/index.html
+++ b/src/index.html
@@ -482,7 +482,7 @@
 		<ul class="list-unstyled marked-list-v1">
 	    <li>
 	      <div class="pie-container">
-	        <h4 class="text-center">People Who Like the Hobbit</h4>
+	        <h4 class="text-center">People Who Like The Hobbit</h4>
 	        <div>
 	          <canvas id="pie"></canvas>
 	        </div>
@@ -490,7 +490,7 @@
 			</li>
 			<li>
 	      <div class="bar-container">
-	        <h4 class="text-center">People Who Like the Hobbit</h4>
+	        <h4 class="text-center">People Who Like The Hobbit</h4>
 	        <div>
 	          <canvas id="bar"></canvas>
 	        </div>
